<resources>
    <string name="app_name">Survy</string>

    <!--> Autenticación con Facebook <!-->
    <string name="facebook_app_id">3157895871143929</string>
    <string name="fb_login_protocol_scheme">fb3157895871143929</string>
    <string name="facebook_client_token">e0e11e05ce16a73282e29567fe58fc88</string>

    <!--> Autenticación con Google <!-->
    <string name="default_web_client_id_fixed">576137766231-vvd6r7b7fb6a03u78dujp436m07fvsrm.apps.googleusercontent.com</string>

    <!--> LOGIN <!-->
    <string name="loginMail">Iniciar Sesión</string>
    <string name="loginRegister">¿Aún no tienes cuenta?</string>
    <string name="loginRegisterButton"><u>Regístrate</u></string>

    <!--> REGISTER <!-->
    <string name="registerTV1">Elija un método de registro</string>
    <string name="registerTV2">¿Ya tienes una cuenta?</string>
    <string name="registerLogin"><u>Volver a Inciar Sesión</u></string>
    <string name="registerMail">Registrar</string>

    <!--> ELEGIR ROL <!-->
    <string name="tvMainElegirRol">Selecciona tu rol</string>
    <string name="btAlumnoElegirRol">Alumno</string>
    <string name="btProfesorElegirRol">Profesor</string>

    <!--> LOGIN MAIL <!-->
    <string name="loginMailTV1">Iniciar sesión con email</string>
    <string name="loginMailTV2"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="loginMailBT">Iniciar sesión</string>
    <string name="loginMailET1">Correo</string>
    <string name="loginMailET2">Contraseña</string>

    <!--> REGISTER MAIL <!-->
    <string name="registerMailTV1">Registrar con email</string>
    <string name="registerMailET1">Nombre</string>
    <string name="registerMailET2">Apellidos</string>
    <string name="registerMailET3">Curso</string>
    <string name="registerMailET4">Correo</string>
    <string name="registerMailET5">Contraseña</string>
    <string name="registerMailBT1">Registrarse</string>
    <string-array name="cursos">
        <item>Curso</item>
        <item>1º ESO</item>
        <item>2º ESO</item>
        <item>3º ESO</item>
        <item>4º ESO</item>
        <item>1º BACH</item>
        <item>2º BACH</item>
        <item>1º CURSO</item>
        <item>2º CURSO</item>
        <item>3º CURSO</item>
        <item>4º CURSO</item>
    </string-array>

    <!--> HOME <!-->
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>
    <string name="titleHome">Home</string>

    <!--> MI PERFIL <!-->
    <string name="titleMiPerfil">Mi Perfil</string>
    <string name="btMiPerfil">Modificar mis datos</string>

    <!--> Modificar perfil <!-->
    <string name="tvMainModificarPerfil">Modificar Perfil</string>
    <string name="btModificarPerfil">Aplicar Cambios</string>
    <string name="btPasswordModificarPerfil"><u>Cambiar Contraseña</u></string>
    <string name="btCancelarModificarPerfil">Cancelar</string>

    <!--> Modificar password <!-->
    <string name="tvMainModificarPassword">Modificar Contraseña</string>
    <string name="etModificarPassword1">Contraseña</string>
    <string name="etModificarPassword2">Repita la Contraseña</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--> MIS ASIGNATURAS PROFESOR <!-->
    <string name="titleMisAsignaturasProfesor">Mis Asignaturas</string>
    <string name="btNuevaAsignaturaProfesor">Nueva Asignatura</string>
    <string name="tvAsignaturasEmptyProfesor">Aún no hay ninguna asignatura</string>
    <string name="hintSearchViewMisAsignaturasProfesor">Buscar Asignatura</string>

    <!--> NUEVA ASIGNATURA PROFESOR <!-->
    <string name="btCrearNuevaAsignaturaProfesor">Crear Asignatura</string>
    <string name="btCancelarNuevaAsignaturaProfesor">Cancelar</string>

    <!--> ASIGNATURA DETAIL PROFESOR <!-->
    <string name="btVerEncuestasAsignaturaDetailProfesor">Ver Encuestas</string>
    <string name="btVerResultadosAsignaturaDetailProfesor">Ver Resultados</string>
    <string name="btCancelarAsignaturaDetailProfesor">Cancelar</string>
    <string name="btEditarAsignaturaDetailProfesor">Editar Asignatura</string>
    <string name="btEliminarAsignaturaDetailProfesor">Eliminar Asignatura</string>
    <string name="alertTitleAsignaturaDetailProfesor">¿Desea eliminar la asignatura</string>
    <string name="alertTextAsignaturaDetailProfesor">Se eliminarán todos los datos de la asignatura, incluyendo las encuestas, sus preguntas, resultados y matrículas de alumnos</string>


    <!--> EDITAR ASIGNATURA PROFESOR <!-->
    <string name="btGuardarCambiosEditarAsignaturaProfesor">Guardar Cambios</string>
    <string name="btCancelarEditarAsignaturaProfesor">Cancelar</string>
    <string name="btGuardarIconoEditarAsignaturaProfesor">Guardar Icono</string>

    <!--> MIS ALUMNOS PROFESOR <!-->
    <string name="titleMisAlumnosProfesor">Mis Alumnos</string>
    <string name="tvSeleccioneMisAlumnosProfesor">Seleccione una opción</string>
    <string name="btBuscarAlumnoMisAlumnosProfesor">Buscar Alumno</string>
    <string name="btMatricularAlumnosMisAlumnosProfesor">Matricular Alumnos</string>
    <string name="btCancelarMatricularAlumnoProfesor">Cancelar</string>

    <!--> MATRICULAR ALUMNO PROFESOR <!-->
    <string name="btGenerarCodigoMatricularAlumnoProfesor">Generar Código</string>
    <string name="btCompartirCodigoMatricularAlumnoProfesor">Compartir Código</string>

    <!--> MIS ASIGNATURAS ALUMNO <!-->
    <string name="btAnadirAsignaturaMisAsignaturasAlumno">Añadir Asignatura</string>

    <!--> MATRICULAR ALUMNO ALUMNO <!-->
    <string name="tvMatricularAlumnoAlumno">Lee un código de asignatura</string>
    <string name="btIntroducirCodigoAlumnoAlumno">Introducir Código</string>
    <string name="tvEscanerQrMatricularAlumnoAlumno">Lea el código QR de la asignatura</string>

    <!--> BUSCAR ALUMNOS PROFESOR <!-->
    <string name="tvEmptyAlumnos">Aún no hay alumnos registrados</string>
    <string name="btMatricularBuscarAlumnosProfesor">Matricular Alumno</string>

    <!--> ALUMNO DETAIL PROFESOR <!-->
    <string name="btVerAsignaturasAlumnoDetailProfesor">Ver Asignaturas</string>

    <!--> VER ASIGNATURAS ALUMNO PROFESOR <!-->
    <string name="alertTitleVerAsingnaturasAlumnoProfesor">¿Desea desmatricular al alumno de la asignatura</string>
    <string name="alertTextVerAsingnaturasAlumnoProfesor">Se eliminarán todos los datos del alumno relacionados con la asignatura, incluyendo sus resultados</string>

    <!--> NUEVA ENCUESTA ALUMNO <!-->
    <string name="titleNuevaEncuestaAlumno">Nueva Encuesta</string>
    <string name="tvEscanerNuevaEncuestaAlumno">Lea el código QR de la encuesta</string>

    <string name="loremIpsunDescripcionEncuesta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae risus et eros vulputate ultricies. Proin in erat lobortis, varius ex at, congue arcu. Phasellus est est, aliquam id magna quis, ultrices sagittis dui. Nullam quis lorem eget diam rutrum sagittis. Nulla facilisi. Nulla sodales, ligula id sagittis gravida, sapien quam consectetur arcu, sed elementum lorem neque a nunc. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In placerat tortor in nisi posuere gravida. Aenean convallis augue at sodales convallis. Nulla vel dui eu urna feugiat dapibus ut tempus lacus.</string>

    <!--> MIS ENCUESTAS PROFESOR <!-->
    <string name="tvEncuestasEmptyProfesor">Aún no hay ninguna encuesta</string>
    <string name="btNuevaEncuestaProfesor">Nueva Encuesta</string>

    <!--> NUEVA ENCUESTA PROFESOR <!-->
    <string name="btCrearEncuestaNuevaEncuestaProfesor">Crear Encuesta</string>
    <string name="btCancelarNuevaEncuestaProfesor">Cancelar</string>

    <!--> ENCUESTA DETAIL PROFESOR <!-->
    <string name="btVerPreguntasEncuestaDetailProfesor">Ver Preguntas</string>
    <string name="btVerResultadosEncuestaDetailProfesor">Ver Resultados</string>
    <string name="btCancelarEncuestaDetailProfesor">Cancelar</string>
    <string name="btEditarEncuestaDetailProfesor">Editar Encuesta</string>
    <string name="btEliminarEncuestaDetailProfesor">Eliminar Encuesta</string>
    <string name="alertTitleEncuestaDetailProfesor">¿Desea eliminar la encuesta</string>
    <string name="alertTextEncuestaDetailProfesor">Se eliminarán todos los datos de la encuesta, incluyendo sus preguntas y los resultados de los alumnos</string>



    <!--> EDITAR ENCUESTA PROFESOR <!-->
    <string name="btGuardarCambiosEditarEncuestaProfesor">Guardar Cambios</string>
    <string name="btCancelarEditarEncuestaProfesor">Cancelar</string>
    <string name="btGuardarIconoEditarEncuestaProfesor">Guardar Icono</string>

    <!--> PREGUNTAS PROFESOR <!-->
    <string name="btNuevaPreguntaPreguntasProfesor">Nueva Pregunta</string>
    <string name="btCancelarPreguntasProfesor">Cancelar</string>
    <string name="tvEmptyPreguntasProfesor">Aún no hay ninguna pregunta en esta encuesta</string>
    <string name="alertTitlePreguntaDetailProfesor">¿Desea eliminar la pregunta</string>
    <string name="alertTextPreguntaDetailProfesor">Se eliminarán los datos de la pregunta, pero los resultados donde aparece se conservarán</string>


    <!--> ENCUESTA DETAIL ALUMNO <!-->
    <string name="btResolverEncuestaDetailAlumno">Resolver Encuesta</string>
    <string name="btVerResultadosEncuestaDetailAlumno">Ver Resultados</string>
    <string name="btCancelarEncuestaDetailAlumno">Cancelar</string>

    <!--> NUEVA PREGUNTA PROFESOR <!-->
    <string name="btCrearPreguntaNuevaPreguntaProfesor">Crear Pregunta</string>
    <string name="btEliminarEditarPreguntaProfesor">Eliminar Pregunta</string>
    <string name="btCancelarNuevaPreguntaProfesor">Cancelar</string>

    <!--> EDITAR PREGUNTA PROFESOR <!-->
    <string name="btGuardarCambiosEditarPreguntaProfesor">Guardar Cambios</string>

    <!--> MIS RESULTADOS ALUMNO <!-->
    <string name="titleMisResultadosAlumno">Mis Resultados</string>

    <!--> RESULTADO ENCUESTA ALUMNO <!-->
    <string name="tv1ResultadoEncuestaAlumno">Tu resultado ha sido:</string>

    <string name="tvMensaje10ResultadoEncuestaAlumno">¡Perfecto! ¡Sigue así!</string>
    <string name="tvMensaje89ResultadoEncuestaAlumno">¡Genial!</string>
    <string name="tvMensaje7ResultadoEncuestaAlumno">¡Muy Bien!</string>
    <string name="tvMensaje6ResultadoEncuestaAlumno">¡Bien hecho!</string>
    <string name="tvMensaje5ResultadoEncuestaAlumno">¡Por los pelos...!</string>
    <string name="tvMensaje4ResultadoEncuestaAlumno">¡Casi lo tienes!</string>
    <string name="tvMensaje23ResultadoEncuestaAlumno">Vaya...</string>
    <string name="tvMensaje01ResultadoEncuestaAlumno">Tienes que esforzarte más...</string>

    <string name="btVolverAAsignaturaResultadoEncuestaAlumno">Volver a la Asignatura</string>
    <string name="btMisResultadosResultadoEncuestaAlumno">Mis Resultados</string>

    <!--> VER RESULTADO ENCUESTA PROFESOR <!-->
    <string name="alertTitlerResultadoEncuestaProfesor">¿Desea eliminar el resultado?</string>
    <string name="alertTextResultadoEncuestaProfesor">Solo se eliminarán los datos de este resultado</string>


    <!--> RESULTADO ASIGNATURA ALUMNO <!-->
    <string name="tvEmptyResultadoAsignaturaAlumno">Aún no hay ningun resultado</string>


</resources>