<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Authentication.LoginEmailActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="445dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/loginMailTV1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="44dp" />

        <EditText
            android:id="@+id/btEmail"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/lightPurple"
            android:hint="@string/loginMailET1"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGray" />

        <EditText
            android:id="@+id/btPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/lightPurple"
            android:hint="@string/loginMailET2"
            android:textColor="@color/black"
            android:textColorHint="@color/lightGray" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@color/yellowButton"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/loginMailBT"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Button
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/loginMailTV2"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>