<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Authentication.RegisterEmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMainModificarPerfilAlumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tvMainModificarPerfil"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="44dp" />

        <EditText
            android:id="@+id/etNombreModificarPerfilAlumno"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/lightPurple"
            android:hint="@string/registerMailET1"
            android:textColor="@color/black"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/etApellidosModificarPerfilAlumno"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/lightPurple"
            android:hint="@string/registerMailET2"
            android:textColor="@color/black"
            android:textColorHint="#546E7A" />

        <Spinner
            android:id="@+id/spinnerModificarPerfilAlumno"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:spinnerMode="dropdown"
            android:background="@color/lightPurple"
            />

        <Button
            android:id="@+id/btPasswordModificarPerfilAlumno"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/btPasswordModificarPerfil"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16dp"
            android:letterSpacing="0"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btAplicarCambiosModificarPerfilAlumno"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/yellowButton"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/btModificarPerfil"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btCancelarModificarPerfilAlumno"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/lightGray"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/btCancelarModificarPerfil"
            android:letterSpacing="0"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>